# Matplotlib-Template-Dashboard

./: .gitignore  LICENSE  README.md  README_en.md  pyproject.toml  requirements.txt
notebook/三维图像/: 三维填充曲线.ipynb  三维折线图.ipynb  三维散点图.ipynb  三维曲面图.ipynb  三维柱状图.ipynb  三维线框图.ipynb  层状三维条形图.ipynb  等高线投影图.ipynb
notebook/三角网格场/: 三角网格等高线图.ipynb  着色的外部网格.ipynb  简单三角网格.ipynb  颜色映射三角网格.ipynb
notebook/其它绘图/: 十字坐标系.ipynb  流线图.ipynb  箭矢图.ipynb  风矢图.ipynb
notebook/坐标系布局/: 2行3列布局.ipynb  三角布局.ipynb  多列布局.ipynb  奇葩布局.ipynb  局部放大图.ipynb  插入图片.ipynb
notebook/折线图/: 三Y轴坐标系.ipynb  光顺折线图.ipynb  具有截断Y轴的折线图.ipynb  具有置信带的折线图.ipynb  双Y轴坐标系.ipynb  堆叠折线图.ipynb  添加标识符的折线图.ipynb  简单折线图.ipynb  误差折线图.ipynb
notebook/散点图/: 向量尺寸散点图.ipynb  简单散点图.ipynb  颜色映射散点图.ipynb
notebook/条形图/: 具有截断Y轴的条形图.ipynb  具有数据标签的条形图.ipynb  具有误差棒的条形图.ipynb  分组条形图.ipynb  堆叠条形图.ipynb  水平条形图.ipynb  简单条形图.ipynb
notebook/正交网格场/: 伪像素图.ipynb  像素图.ipynb  热度图.ipynb  等高线图.ipynb  等高线填充图.ipynb
notebook/统计图/: 二维直方图.ipynb  光顺分布图.ipynb  直方图A.ipynb  直方图B.ipynb  直方图C.ipynb  直方图D.ipynb  箱型图A.ipynb  箱型图B.ipynb  箱型图C.ipynb  蜂窝图.ipynb
notebook/饼图/: 普通饼图.ipynb  环形饼图.ipynb  细分饼图.ipynb  饼图标签.ipynb
resources/mesh/: cleveland.msh  temperature.npy
resources/zh_CN/css/: style.css  vscode.css
resources/zh_CN/html/: footer.html  header.html
resources/zh_CN/js/: script.js  vscode.js
script/: build.bat  clean_notebook_output.py  config.py  dir2html.py  ipynb2py.py  py2image.py  resource_embedding.py  style.py
style/: 双边框.mplstyle  四边框.mplstyle  默认.mplstyle
style/双边框/: matplotlibrc
style/四边框/: matplotlibrc
style/默认/: matplotlibrc
