name = "matplotlib-template"
version = "0.1.0"
description = "Manage Matplotlib templates based on HTML pages"
authors = ["litchi <wuyao1997@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.08"
matplotlib = ">3.8.0"
numpy = ">1.24.0"

[tool.poetry.group.dev.dependencies]
scipy = ">1.9.0"
meshio = ">5.2.0"
beautifulsoup4 = ">4.9.0"
nbformat = ">5.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black Formatter Config
[tool.black]
line-length = 88
include = '\.(py|ipynb)$'
exclude = 'build/'
src = '.'
